# homih

./: .cruft.json  .gitignore  .gitlab-ci.yml  .lvimrc  .pre-commit-config.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: documentation.yml
docs/reference/: homih.md
scripts/: homih
src/homih/: __init__.py  fact.py  play.py
tests/: test_add.py  test_fact.py
