[tool.ruff]
target-version = "py311"
extend-select = ["I", "TRY", "UP"]

[tool.pytest.ini_options]
addopts = "--cov=src/homih/ --cov-report=term-missing"


[tool.hatch]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "regex_commit"
commit_extra_args = ["-e"]
path = "src/homih/__init__.py"

[tool.hatch.envs.default]
python = "3.11"
dependencies = [
    "black",
    "mypy",
    "ruff",
    "pytest",
    "pytest-cov",
    "mkdocs-material",
    "mkdocstrings[python]",
    
]

[tool.hatch.envs.default.scripts]
test = "pytest"
test-cov-xml = "pytest --cov-report=xml"
lint = [
  "black .",
  "ruff --fix .",
  "mypy src/homih/",
]
lint-check = [
  "black --check .",
  "ruff .",
  "mypy src/homih/",
]
docs-serve = "mkdocs serve"
docs-build = "mkdocs build"

[build-system]
requires = ["hatchling", "hatch-regex-commit"]
build-backend = "hatchling.build"

[project]
name = "homih"
authors = [
  { name = "homih", email = "tingshuo.hsu@gmail.com" }
]
description = "Python CLI utilities to drive proficiency of development flow"
readme = "README.md"
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.11"
dependencies = [
]

[project.urls]
Documentation = "https://remexemer.github.io/homih/"
Source = "https://github.com/remexemer/homih"
